<resources>
    <string name="app_name">YonCoffee</string>
    <string name="txt_next">Tiếp tục</string>
    <string name="txt_phone_number">Số điện thoại</string>
    <string name="txt_noti_valid_phonenumber">Số điện thoại không hợp lệ!</string>
    <string name="txt_noti_valid_pass">Sai mật khẩu!</string>
    <string name="txt_password">Mật khẩu</string>
    <string name="xin_chao">Xin chào,</string>
    <string name="_0">0</string>
    <string name="espresso">Espresso</string>
    <string name="ic_them">+</string>
    <string name="ic_bot">-</string>
    <string name="_1">1</string>
    <string name="size">Cỡ</string>
    <string name="sugar">Đường</string>
    <string name="ice">Đá</string>
    <string name="total">Tổng:</string>
    <string name="th_m_v_o_gi">Thêm vào giỏ</string>
    <string name="s_th_ch">Sở thích</string>
    <string name="nong">Nóng</string>
    <string name="lanh">Lạnh</string>
</resources>